--- a/styli.css
+++ b/styli.css
@@ -5,12 +5,18 @@
     background-color: #1f5992;
     color: white;
 
-
+ display: flex; 
+ justify-content: space-around;
 
 
 }
 .Logotipogamer{
-    background-color: rgb(116, 0, 25);
-width: 5%;
 
+width: 10%;;
+
+}
+.cabecalho-item{
+
+    display: inline-block;
+    margin: 0 20px;
 }
